# ssith-mit-sanctum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RiscvToolchain.txt  build.sh  run.sh
pam/: CMakeLists.txt  enclave-stubs.c  enclave.lds  enclave_entry.S  pam-create-db.cpp  pam-enclave-decrypt-db.c  pam-enclave-encrypt-db.c  pam-enclave-main.c  pam-enclave-module.c  pam-enclave.c  pam-enclave.h  pam.d.testing  test-pam-enclave.cpp
scripts/: aeskey.lds
src/: AuthEnclave.cpp  AuthEnclave.h  CMakeLists.txt  auth_enclave.c  auth_enclave.h  encrypt-enclave.cpp  test-enclaves.cpp
